# bbbb

./: .gitignore  README.md  build.sh  grpc-docs.md  script.sh
code-generate/: pubspec.yaml
code-generate/protos/v1/: book.proto  getbook.proto  main.proto
code-generate/protos/v3/: main.proto
code-generate/protos/v4/: main.proto
code-generate/test/: code_generate_test.dart
dart-grpc-client/: pubspec.yaml
dart-grpc-client/test/: dart_grpc_client_test.dart
dart-grpc-stub/: Dockerfile  pubspec.yaml
dart-grpc-stub/lib/: grpcdart.dart
dart-grpc-stub/test/: grpcdart_test.dart
flutter-client-stub/: pubspec.yaml
flutter-client-stub/lib/: main.dart
getway-one-app/: main.go
grpc-dart/getway/: dart_getway.dart
grpc-dart/test/: grpc_compression_flag_test.dart
grpc-dart/test/src/: client_utils.dart
grpc-gateway/.github/workflows/: renovate.yml
grpc-gateway/examples/mobile/: pubspec.yaml
grpc-getway-client/: go.mod  main.go
grpc-getway-one/: go.sum  main.go
grpc-rust-server/: Cargo.toml  Dockerfile  README.Docker.md  README.md  build.rs  compose.yaml
grpc-rust-server/lib/: movice.rs
grpc-rust-server/protos/v1/: main.proto
grpc-rust-server/protos/v2/: vedio.proto
grpc-rust-server/src/: server.rs
node-client/: .gitignore  app.js  package.json  reflection.js  server.js
node-client-call/: app.js  greeter.proto
one-digital-grpc-gateway/: go.mod  go.sum
one-digital-grpc-gateway/bufer/v1/: buf.gen.yaml
proto-gen-getway/: go.mod  run.sh
proto-gen-getway/module/: runtime.go  v1getway.go
test-infra/: revers-proxy.yml
(+5 files in other folders)
